test/bad/basic/cmp02.px

if 1 == 0 == false do
    skip
